# proton-drive-webdav-bridge

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  Makefile  README.md  bunfig.toml  eslint.config.js  package.json  tsconfig.json
docs/: api-design.md  prd.md
patches/: nephele@1.0.0-alpha.67.patch
src/: auth.ts  config.ts  drive.ts  index.ts  keychain.ts  logger.ts  paths.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/cli/: auth.ts  config.ts  daemon-utils.ts  index.ts  start.ts  status.ts  stop.ts
src/errors/: ApiError.ts  AppError.ts  AuthenticationError.ts  README.md  ValidationError.ts  WebDAVError.ts  index.ts  (+1 more)
test/: auth.test.ts  cache-performance.test.ts  cli.test.ts  config.test.ts  drive-crypto.test.ts  drive.test.ts  errors.test.ts  gui.accounts.test.ts  gui.main.test.ts  gui.mount.test.ts  gui.mountstatus.event.test.ts  gui.sidebar.test.ts  gui.sidebar.toggle.test.ts  gui.sidecar.e2e.test.ts  happydom.ts  index.test.ts  keychain.test.ts  lockManager.test.ts  logger.test.ts  matchers.d.ts  mount-operations.test.ts  paths.test.ts  proton-auth.test.ts  protonDriveLock.test.ts  result.test.ts  setup.ts  status-cache.test.ts  tauri-commands.test.ts  test-setup.ts  testing-library.ts  validation.test.ts  webdav-server.test.ts  webdav.copy_move.permissions.e2e.test.ts  webdav.e2e.test.ts  webdav.getStream.unit.test.ts  webdav.lock.conflicts.e2e.test.ts  webdav.lock.e2e.test.ts  webdav.metadata.hydration.test.ts  webdav.properties.test.ts  webdav.propfind.e2e.test.ts  (+3 more)
(+52 files in other folders)
